dark mode bg fix

--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,13 @@ body {
   background-repeat: no-repeat;
 }
 
+body.dark-mode {
+  background-image: linear-gradient(62deg, var(--primary-color) 13%, rgba(0, 0, 0, 0.5) 4%),
+                    linear-gradient(44deg, var(--secondary-color) 39%, rgba(0, 0, 0, 0.5) 18%),
+                    linear-gradient(118deg, var(--primary-color) 40%, rgba(0, 0, 0, 0.5) 54%),
+                    linear-gradient(58deg, var(--secondary-color) 83%, rgba(0, 0, 0, 0.5) 23%);
+}
+
 .dark-mode {
   --primary-color: var(--primary-color-dark);
   --secondary-color: var(--secondary-color-dark);
